changed maven conf and scripts to fit with the new structure (deps in lib folder and provided runtime). Still need to test Windows and Mac